tests/NormalTests/paczka1/fuzzy1/94395487.err
Error in line 1: QyTMt S911 13,4
Error in line 6: r3cu A89 14,1
Error in line 10: eul4JkDWo A89 66,1
Error in line 14: r3cu S366 2,5
Error in line 30: jhPJQsLIZ S911 98,3
Error in line 28: FCeK S911 233,3
Error in line 35: FCeK S366 92,0
Error in line 39: jhPJQsLIZ S366 42,3
